--- a/quick_start (1).ipynb
+++ b/quick_start (1).ipynb
@@ -1,1 +1,257 @@
-
+{
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import pygame\n",
+        "import numpy as np\n",
+        "import cv2\n",
+        "import time\n",
+        "from handdetector import HandDetector\n",
+        "import scipy"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "1. **Audio Parameters:**\n",
+        "   - sample_rate: Defines the number of audio samples per second, set to 44,100 Hz, which is a standard sample rate for high-quality audio.\n",
+        "   - buffer_size: Determines the duration of audio waveform chunks in seconds, set to 0.01 seconds. This controls the granularity of the sound processing.\n",
+        "\n",
+        "2. **Sound Envelope Parameters:**\n",
+        "   - sound_params: A dictionary containing the parameters for shaping the sound envelope:\n",
+        "     -attack: The time it takes for the sound to reach its peak after the note is played, set to 0.01 seconds (short attack).\n",
+        "     - decay: The time it takes for the sound to decrease from the peak to the sustain level, set to 0.3 seconds.\n",
+        "     - sustain: The level at which the sound remains after decay, set to 0.7 (moderate sustain).\n",
+        "     - release: The time it takes for the sound to fade to silence after the note is released, set to 0.2 seconds.\n",
+        "\n",
+        "3. **Frequency Calculation:**\n",
+        "   - base_frequency: Sets the frequency of the note 'do' to 800 Hz.\n",
+        "   - semitone_ratio: The mathematical ratio between the frequencies of two adjacent semitones, calculated using the 12th root of 2.\n",
+        "   - frequencies: A dictionary mapping each musical note ('do', 're', 'mi', etc.) to its corresponding frequency. The frequencies for notes are calculated relative to 'do' by multiplying the base frequency with the appropriate power of semitone_ratio.\n",
+        "\n",
+        "4. **Finger to Note Mapping:**\n",
+        "   - finger_to_note: A dictionary mapping specific hand landmarks (finger positions identified by their index) to musical notes. These mappings are used to play corresponding notes when a specific finger position is detected by the hand-tracking system.\n",
+        "\n",
+        "In summary, this code sets up the necessary parameters to generate and play musical notes with specific characteristics (envelope shaping, frequency calculation) in response to hand gestures detected by a vision system."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Parameters\n",
+        "\n",
+        "sample_rate = 44100 \n",
+        "buffer_size = 0.01  \n",
+        "\n",
+        "\n",
+        "sound_params = {\n",
+        "    'attack': 0.01,        \n",
+        "    'decay': 0.3,          \n",
+        "    'sustain': 0.7,        \n",
+        "    'release': 0.2,        \n",
+        "}\n",
+        "\n",
+        "base_frequency = 800  # Frequency of 'do' \n",
+        "semitone_ratio = 2 ** (1 / 12)  # Ratio of frequencies for each semitone\n",
+        "\n",
+        "# Calculate frequencies for other notes relative to 'do'\n",
+        "frequencies = {\n",
+        "    'do': base_frequency,\n",
+        "    're': base_frequency * semitone_ratio ** 2,  # D4\n",
+        "    'mi': base_frequency * semitone_ratio ** 4,  # E4\n",
+        "    'fa': base_frequency * semitone_ratio ** 5,  # F4\n",
+        "    'sol': base_frequency * semitone_ratio ** 7,  # G4\n",
+        "    'la': base_frequency * semitone_ratio ** 9,  # A4\n",
+        "    'si': base_frequency * semitone_ratio ** 11  # B4\n",
+        "}\n",
+        "\n",
+        "# Finger landmarks to keys mapping\n",
+        "finger_to_note = {\n",
+        "    21: 'do', 5: 're', 8: 'mi', 12: 'fa', 16: 'sol', 20: 'la', 17: 'si'\n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def generate_piano_waveform(frequency, duration, sample_rate):\n",
+        "    num_samples = int(sample_rate * duration)\n",
+        "    t = np.linspace(0, duration, num_samples, endpoint=False)\n",
+        "    \n",
+        "    # Piano-like harmonics\n",
+        "    harmonics = [1, 2, 3, 4, 5]\n",
+        "    amplitudes = [1.0, 0.5, 0.3, 0.2, 0.1]\n",
+        "    \n",
+        "    waveform = np.zeros_like(t)\n",
+        "    for harmonic, amplitude in zip(harmonics, amplitudes):\n",
+        "        waveform += amplitude * np.sin(2 * np.pi * frequency * harmonic * t)\n",
+        "    \n",
+        "    # Apply envelope using sound_params\n",
+        "    attack = int(num_samples * sound_params['attack'])\n",
+        "    decay = int(num_samples * sound_params['decay'])\n",
+        "    sustain_level = sound_params['sustain']\n",
+        "    \n",
+        "    if attack + decay > num_samples:\n",
+        "        decay = num_samples - attack\n",
+        "    \n",
+        "    release = num_samples - attack - decay\n",
+        "    \n",
+        "    envelope = np.zeros_like(t)\n",
+        "    envelope[:attack] = np.linspace(0, 1, attack)\n",
+        "    envelope[attack:attack+decay] = np.linspace(1, sustain_level, decay)\n",
+        "    envelope[attack+decay:] = np.linspace(sustain_level, 0, release)\n",
+        "    \n",
+        "    waveform *= envelope\n",
+        "    \n",
+        "    # Normalize\n",
+        "    waveform /= np.max(np.abs(waveform))\n",
+        "    \n",
+        "    # High-pass filter to remove low-frequency noise\n",
+        "    cutoff_freq = 80  # Cutoff frequency in Hz\n",
+        "    b, a = scipy.signal.butter(1, cutoff_freq / (0.5 * sample_rate), btype='high')\n",
+        "    waveform = scipy.signal.filtfilt(b, a, waveform)\n",
+        "    \n",
+        "    # Create stereo waveform\n",
+        "    stereo_waveform = np.array([waveform, waveform]).T.copy()\n",
+        "    return (stereo_waveform * 0.5).astype(np.float32)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def waveform_to_sound(waveform):\n",
+        "    waveform=(waveform*32767).astype(np.int16)\n",
+        "    sound=pygame.sndarray.make_sound(waveform)\n",
+        "    return sound"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 35,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def distance(lmList, epsilon):\n",
+        "    thumb=np.array(lmList[4])\n",
+        "    notes_distances={\n",
+        "\n",
+        "    }\n",
+        "    \n",
+        "    for finger, note in finger_to_note.items():\n",
+        "        dist=np.linalg.norm(np.array(lmList[finger])-thumb)\n",
+        "        notes_distances[note]=dist\n",
+        "\n",
+        "    notes_distance={note:0 for note in finger_to_note.values()}\n",
+        "    \n",
+        "    min_note=min(notes_distances,key=notes_distances.get)\n",
+        "    \n",
+        "    if notes_distances[min_note]<=epsilon:\n",
+        "        notes_distance[min_note]=1\n",
+        "\n",
+        "    return notes_distance"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 40,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#the main function\n",
+        "\n",
+        "def main():\n",
+        "    pTime=0\n",
+        "    cap=cv2.VideoCapture(0)\n",
+        "    detector=HandDetector()\n",
+        "    \n",
+        "    while True:\n",
+        "        success,img=cap.read()\n",
+        "        if not success:\n",
+        "            break\n",
+        "        \n",
+        "        img=cv2.flip(img,1)\n",
+        "        img=detector.findHands(img,True)\n",
+        "        lmList=detector.findPosition(img,0,True)\n",
+        "        \n",
+        "        notes_on={\n",
+        "\n",
+        "        }\n",
+        "\n",
+        "        if lmList:\n",
+        "            extracted_columns=[[row[1],row[2]] for row in lmList]\n",
+        "            notes_on=distance(extracted_columns,30) #change the activation distance\n",
+        "            \n",
+        "            for note, is_playing in notes_on.items():\n",
+        "                if is_playing:\n",
+        "                    waveform=generate_piano_waveform(frequencies[note],buffer_size,sample_rate)\n",
+        "                    sound=waveform_to_sound(waveform)\n",
+        "                    sound_channels[note].play(sound,loops=-1)\n",
+        "                else:\n",
+        "                    sound_channels[note].fadeout(100) \n",
+        "        \n",
+        "        cTime=time.time()\n",
+        "        fps=1/(cTime-pTime)\n",
+        "        pTime=cTime\n",
+        "        \n",
+        "        cv2.putText(img,f\"FPS:{int(fps)}\",(10,70),cv2.FONT_HERSHEY_PLAIN,3,(0,255,255),3)\n",
+        "        cv2.imshow(\"Virtual Piano\",img)\n",
+        "       \n",
+        "        \n",
+        "        if cv2.waitKey(1) & 0xFF ==ord('q'):\n",
+        "            break\n",
+        "    \n",
+        "    cap.release()\n",
+        "    cv2.destroyAllWindows()\n",
+        "    pygame.quit()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 41,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Initialize Pygame\n",
+        "pygame.init()\n",
+        "sound_channels = {note: pygame.mixer.Channel(i) for i, note in enumerate(frequencies)}\n",
+        "\n",
+        "main()\n"
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.5"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
+}
